# create-python-app

./: LICENSE  README.md  cookiecutter.json
.github/workflows/: publish.yml  test.yml
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
{{cookiecutter.project_slug}}/.github/workflows/: publish.yml  release.yml  test.yml
{{cookiecutter.project_slug}}/docs/: CHANGELOG.md
{{cookiecutter.project_slug}}/requirements/: prod.txt
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  cli.py  core.py
{{cookiecutter.project_slug}}/tests/: test_dict_functions.py  test_smoke.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  core.py
