[metadata]
name = {{cookiecutter.project_slug}}
version = attr: {{cookiecutter.project_slug}}.__version__
author = {{cookiecutter.author}}
author_email = {{cookiecutter.email}}
description = {{cookiecutter.project_description}}
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}
project_urls =
    Bug Tracker = https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =

[options.packages.find]
where = src

[options.entry_points]
console_scripts =

[options.extras_require]
dev = pytest; pytest-cov; flake8

[tool:pytest]
testpaths = tests

[coverage:run]
branch = true
source =
    {{cookiecutter.project_slug}}
    tests

[flake8]
exclude =
  .git
  .tox
  venv
  build
per-file-ignores =
    # __init__ module exports names
    src/{{cookiecutter.project_slug}}/__init__.py: F401
